Final .html structure nearly complete

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </h2>
 
         <p>
-          Clipboard instantly stores any item you copy in the cloud, meaning you
-					can access your snippets immediately on all your devices. Our Mac and
-					iOS apps will help you organize everything.
+          Clipboard instantly stores any item you copy in the cloud, meaning you can access <br/>
+          your snippets immediately on all your devices. Our Mac and iOS apps will help you <br> 
+          organize everything.
         </p>
 
       </div>
