Added sneak preview image

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 
         <div class="image-three">
 
+          <img src="./images/icon-preview.svg" alt="">
+
           <h3>
             Sneak preview
           </h3>
