Added id for the image in footer-container class

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <div class="footer-container">
 
-        <img src="./images/logo.svg" alt="main-logo">
+        <img id="footer-image" src="./images/logo.svg" alt="main-logo">
 
         <ul class="links-container">
 
