--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="container-a-one">
 
-        <h2 class="header-headline-h2">
+        <h2 class="header-headline-h2" style="font-weight: 600;">
           Keep track of your snippets
         </h2>
 
@@ -74,7 +74,7 @@
 
         <div class="text-container-computer">
 
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             Quick Search
           </h3>
 
@@ -83,7 +83,7 @@
             category, web address, application, and more.
           </p>
 
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             iCloud Sync
           </h3>
 
@@ -92,7 +92,7 @@
             your devices.
           </p>
           
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             Complete History
           </h3>
           
@@ -111,7 +111,7 @@
 
       <div class="container-b-one">
 
-        <h2 class="header-headline-h2">
+        <h2 class="header-headline-h2" style="font-weight: 600;">
           Access Clipboard anywhere
         </h2>
 
@@ -138,7 +138,7 @@
 
       <div class="container-c-one">
 
-        <h2 class="header-headline-h2">
+        <h2 class="header-headline-h2" style="font-weight: 600;">
           Supercharge your workflow
         </h2>
 
@@ -154,7 +154,7 @@
 
           <img src="./images/icon-blacklist.svg" alt="image-icon-blacklist">
 
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             Create blacklists
           </h3>
 
@@ -170,7 +170,7 @@
 
           <img src="./images/icon-text.svg" alt="image-icon-text">
 
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             Plain text snippets
           </h3>
 
@@ -185,7 +185,7 @@
 
           <img src="./images/icon-preview.svg" alt="image-icon-preview">
 
-          <h3 class="header-headline-h3">
+          <h3 class="header-headline-h3" style="font-weight: 400;">
             Sneak preview
           </h3>
 
@@ -236,7 +236,7 @@
 
     <section class="container-e">
 
-      <h2 class="header-headline-h2">
+      <h2 class="header-headline-h2" style="font-weight: 600;">
         Clipboard for iOS and Mac OS
       </h2>
 
